--- a/call.html
+++ b/call.html
@@ -135,13 +135,13 @@ footer {
         </section>
         <section class="contact-info">
             <h2>管理者登録について</h2>
-            <p>「みんなの翻刻広場」管理者登録をご検討中の方は上記のメールアドレスへお問合せください。管理者への詳しい説明は下記のPDFをダウンドードしてください。</p>
+            <p>「みんなの活字化広場」管理者登録をご検討中の方は上記のメールアドレスへお問合せください。管理者への詳しい説明は下記のPDFをダウンドードしてください。</p>
             <a class="download-link" href="path/to/your/file.pdf" download="file.pdf">PDFをダウンロード</a>
         </section>
       
     </main>
     <footer>
-        <p>&copy; 2024 みんなの翻刻広場</p>
+        <p>&copy; 2024 みんなの活字化広場</p>
     </footer>
 </body>
 </html>
