--- a/member.html
+++ b/member.html
@@ -85,7 +85,6 @@
             border-radius: 8px;
             padding: 20px;
             margin-bottom: 20px;
-            margin-left: 10px;
             width: 100%;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             text-align: left;
@@ -108,6 +107,7 @@
         .section ul li {
             margin-bottom: 10px;
         }
+
         .join-project-box {
             background: #007bff;
             padding: 1rem;
@@ -128,14 +128,161 @@
         }
 
         .join-project-link:hover {
-            background: #007bff;
+            background: #0056b3;
             color: #e9ecef;
         }
 
-        .join-project-text {
+        /* Timeline styles */
+        .timeline-box {
+            width: 100%;
+        }
+
+        .timeline-post {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            background-color: #ffffff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            padding: 15px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
+        }
+
+        .timeline-post img {
+            width: 150px; /* 固定サイズにする */
+            height: auto; /* アスペクト比を維持する */
+            border-radius: 8px;
+            margin-right: 15px;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+
+        .timeline-post img:hover {
+            opacity: 0.8;
+        }
+
+        .timeline-post-content {
+            flex: 1;
+        }
+
+        .timeline-post-content p {
+            margin: 10px 0;
+        }
+
+        .timeline-post-content .user {
+            font-weight: bold;
+        }
+
+        .timeline-post-content .timestamp {
+            color: #777;
+        }
+
+        .comment-form {
+            margin-top: 10px;
+            display: flex;
+            align-items: center;
+        }
+
+        .comment-form input {
+            width: calc(100% - 100px);
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 1em;
+            margin-right: 10px;
+        }
+
+        .comment-form button {
+            padding: 5px 30px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            background-color: #007BFF;
+            color: white;
+            font-size: 1em;
+            transition: background-color 0.3s;
+        }
+
+        .comment-form button:hover {
+            background-color: #0056b3;
+        }
+
+        .comment-list {
+            margin-top: 10px;
+        }
+
+        .comment-list li {
+            margin-bottom: 5px;
+            padding: 5px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        /* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 1001;
+        }
+
+        .modal-content {
+            position: relative;
+            background-color: #fff;
+            border-radius: 8px;
+            overflow: hidden;
+            max-width: 40%;
+            max-height: 100%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
             display: block;
         }
 
+        .modal-controls {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .modal-controls button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px;
+            cursor: pointer;
+            margin-bottom: 5px;
+            font-size: 14px;
+        }
+
+        .modal-controls button:hover {
+            background-color: #0056b3;
+        }
+
+        .modal-controls .modal-close {
+            background-color: #dc3545;
+        }
+
+        .modal-controls .modal-close:hover {
+            background-color: #c82333;
+        }
     </style>
 </head>
 <body>
@@ -164,9 +311,22 @@
             </ul>
         </div>
     </main>
+
+    <!-- Modal -->
+    <div id="imageModal" class="modal">
+        <div class="modal-content">
+            <img id="modalImage" src="" alt="拡大画像">
+            <div class="modal-controls">
+                <button class="modal-zoom-in">ズームイン</button>
+                <button class="modal-zoom-out">ズームアウト</button>
+                <button class="modal-close">閉じる</button>
+            </div>
+        </div>
+    </div>
+
     <script type="module">
-        import { getAuth, signOut, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-auth.js';
-        import { getFirestore, collection, getDocs } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore.js';
+        import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-auth.js';
+        import { getFirestore, collection, getDocs, addDoc } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore.js';
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-app.js';
 
         const firebaseConfig = {
@@ -216,14 +376,21 @@
 
             try {
                 const querySnapshot = await getDocs(collection(db, 'posts'));
-                querySnapshot.forEach((doc) => {
+                querySnapshot.forEach(async (doc) => {
                     const data = doc.data();
 
                     const listItem = document.createElement('li');
+                    listItem.classList.add('timeline-post');
 
                     const img = document.createElement('img');
                     img.src = data.imageUrl;
                     img.alt = '投稿画像';
+                    img.addEventListener('click', () => {
+                        openModal(data.imageUrl);
+                    });
+
+                    const postContent = document.createElement('div');
+                    postContent.className = 'timeline-post-content';
 
                     const text = document.createElement('p');
                     text.textContent = data.text;
@@ -236,15 +403,98 @@
                     timestamp.className = 'timestamp';
                     timestamp.textContent = `投稿日: ${new Date(data.timestamp).toLocaleString()}`;
 
-                    listItem.appendChild(img);
-                    listItem.appendChild(text);
-                    listItem.appendChild(user);
-                    listItem.appendChild(timestamp);
+                    const commentList = document.createElement('ul');
+                    commentList.className = 'comment-list';
 
+                    const commentForm = document.createElement('div');
+                    commentForm.className = 'comment-form';
+
+                    const commentInput = document.createElement('input');
+                    commentInput.type = 'text';
+                    commentInput.placeholder = 'コメントを入力...';
+
+                    const commentButton = document.createElement('button');
+                    commentButton.textContent = '送信';
+
+                    commentButton.addEventListener('click', async () => {
+                        const commentText = commentInput.value.trim();
+                        if (commentText) {
+                            try {
+                                await addDoc(collection(db, `posts/${doc.id}/comments`), {
+                                    text: commentText,
+                                    userName: user.textContent.replace('投稿者: ', '') || '匿名',
+                                    timestamp: new Date(),
+                                });
+                                commentInput.value = '';
+                                loadComments(doc.id, commentList);
+                            } catch (error) {
+                                console.error('コメント投稿エラー:', error);
+                            }
+                        }
+                    });
+
+                    commentForm.appendChild(commentInput);
+                    commentForm.appendChild(commentButton);
+                    postContent.appendChild(text);
+                    postContent.appendChild(user);
+                    postContent.appendChild(timestamp);
+                    postContent.appendChild(commentList);
+                    postContent.appendChild(commentForm);
+
+                    listItem.appendChild(img);
+                    listItem.appendChild(postContent);
+
+                    const loadComments = async (postId, commentListElement) => {
+                        try {
+                            const commentsSnapshot = await getDocs(collection(db, `posts/${postId}/comments`));
+                            commentListElement.innerHTML = ''; // 既存のコメントをクリア
+                            commentsSnapshot.forEach((commentDoc) => {
+                                const commentData = commentDoc.data();
+                                const commentItem = document.createElement('li');
+                                commentItem.textContent = `${commentData.userName}: ${commentData.text}`;
+                                commentListElement.appendChild(commentItem);
+                            });
+                        } catch (error) {
+                            console.error('コメント取得エラー:', error);
+                        }
+                    };
+
+                    await loadComments(doc.id, commentList);
                     timelineList.appendChild(listItem);
                 });
             } catch (error) {
                 console.error("タイムライン取得エラー: ", error);
+            }
+        });
+
+        const modal = document.getElementById('imageModal');
+        const modalImage = document.getElementById('modalImage');
+        const closeButton = document.querySelector('.modal-close');
+        const zoomInButton = document.querySelector('.modal-zoom-in');
+        const zoomOutButton = document.querySelector('.modal-zoom-out');
+
+        let currentScale = 1;
+
+        function openModal(imageUrl) {
+            modal.style.display = 'flex';
+            modalImage.src = imageUrl;
+        }
+
+        closeButton.addEventListener('click', () => {
+            modal.style.display = 'none';
+            modalImage.style.transform = 'scale(1)'; // Reset zoom
+            currentScale = 1;
+        });
+
+        zoomInButton.addEventListener('click', () => {
+            currentScale += 0.1;
+            modalImage.style.transform = `scale(${currentScale})`;
+        });
+
+        zoomOutButton.addEventListener('click', () => {
+            if (currentScale > 0.2) {
+                currentScale -= 0.1;
+                modalImage.style.transform = `scale(${currentScale})`;
             }
         });
 
