--- a/index.html
+++ b/index.html
@@ -238,6 +238,11 @@
             活字化するのにWordなどのファイル提出は必要なく画像をクリックするだけで、使いやすいデザインを採用した入力ボックスが表示されます。ぜひ、このプロジェクトに取り組んで
             活字化の楽しさを味わってみてください！！
         </p>
+        <video width="500" height="300" autoplay muted>
+            <source src="toppp.mp4" type="video/mp4">
+            お使いのブラウザはビデオタグに対応していません。
+          </video>
+          
         <div class="text-box-container">
             <div class="text-box">
                 <h3>活字化にチャレンジしよう！</h3>
