--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             活字化の楽しさを味わってみてください！！
         </p>
         <video width="500" height="300" autoplay muted>
-            <source src="toppp.mp4" type="video/mp4">
+            <source src="ezyZip.mp4" type="video/mp4">
             お使いのブラウザはビデオタグに対応していません。
           </video>
           
