--- a/member.html
+++ b/member.html
@@ -287,7 +287,7 @@
 </head>
 <body>
     <header>
-        <h1>みんなの翻刻広場（会員専用ページ）</h1>
+        <h1>みんなの活字化広場（会員専用ページ）</h1>
         <div class="header-right">
             <p id="welcomeMessage">ようこそ、会員様！</p>
             <button id="logout">ログアウト</button>
