--- a/upload.html
+++ b/upload.html
@@ -56,6 +56,7 @@
             transition: background-color 0.3s;
             width: 100%;
             box-sizing: border-box;
+            margin-top: 1rem;
         }
 
         .upload-container button:hover {
@@ -72,17 +73,36 @@
             text-align: center;
         }
 
-        #error-message {
+        #message.error-message {
             color: #dc3545;
         }
 
-        #success-message {
+        #message.success-message {
             color: #28a745;
         }
 
-      
+        .go-back-button {
+            margin-top: 1rem;
+            padding: 0.75rem;
+            border: none;
+            border-radius: 4px;
+            background-color: #6c757d;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        .go-back-button:hover {
+            background-color: #5a6268;
+        }
+
+        .go-back-button:active {
+            background-color: #4e555b;
+        }
     </style>
-    <script type="module" src="upload.js"></script>
 </head>
 <body>
     <div class="upload-container">
@@ -91,18 +111,110 @@
         <select id="folderSelect">
             <option value="">フォルダーを選択</option>
         </select>
-        <input type="file" id="file" accept="image/*" required>
+        <input type="file" id="file" accept="image/*" multiple required>
         <button onclick="uploadFile()">アップロード</button>
+        <button class="go-back-button" onclick="goBack()">戻る</button>
         <div id="message"></div>
-        <button class="close-button" onclick="closeContainer();">&times;</button>
     </div>
     
-    <script>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
+        import { getStorage, ref, uploadBytesResumable, getDownloadURL, listAll } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-storage.js";
+        import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyDN9KQ50hwjlzFNc26aMOCS0H06JwggY68",
+            authDomain: "honkoku-hiroba-21400.firebaseapp.com",
+            projectId: "honkoku-hiroba-21400",
+            storageBucket: "honkoku-hiroba-21400.appspot.com",
+            messagingSenderId: "909469448032",
+            appId: "1:909469448032:web:8c62f7f2a978c711cd9005",
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const storage = getStorage(app);
+        const auth = getAuth(app);
+
+        onAuthStateChanged(auth, (user) => {
+            if (!user) {
+                window.location.href = "login.html";
+            }
+        });
+
+        window.uploadFile = function () {
+            const files = document.getElementById('file').files;
+            const folderName = document.getElementById('folderName').value.trim();
+            const selectedFolder = document.getElementById('folderSelect').value;
+
+            if (files.length === 0) {
+                displayMessage("ファイルを選択してください。", "error-message");
+                return;
+            }
+
+            const folderPath = folderName || selectedFolder;
+
+            if (!folderPath) {
+                displayMessage("フォルダーを選択または新規作成してください。", "error-message");
+                return;
+            }
+
+            let uploadedFiles = 0;
+            const totalFiles = files.length;
+
+            Array.from(files).forEach((file) => {
+                const storageRef = ref(storage, `uploads/${folderPath}/${file.name}`);
+                const uploadTask = uploadBytesResumable(storageRef, file);
+
+                uploadTask.on('state_changed',
+                    (snapshot) => {
+                        // 進捗表示が必要な場合はここにコードを追加
+                    },
+                    (error) => {
+                        displayMessage("アップロードに失敗しました: " + error.message, "error-message");
+                    },
+                    () => {
+                        getDownloadURL(uploadTask.snapshot.ref).then(() => {
+                            uploadedFiles++;
+                            if (uploadedFiles === totalFiles) {
+                                displayMessage("すべてのファイルがアップロードされました。", "success-message");
+                            }
+                        });
+                    }
+                );
+            });
+        }
+
+        function displayMessage(message, className) {
+            const messageElement = document.getElementById('message');
+            messageElement.innerText = message;
+            messageElement.className = className;
+        }
+
+        window.onload = function() {
+            const folderSelect = document.getElementById('folderSelect');
+
+            const listRef = ref(storage, 'uploads/');
+            listAll(listRef)
+                .then((res) => {
+                    res.prefixes.forEach((folderRef) => {
+                        const option = document.createElement('option');
+                        option.value = folderRef.name;
+                        option.textContent = folderRef.name;
+                        folderSelect.appendChild(option);
+                    });
+                })
+                .catch((error) => {
+                    console.error('フォルダーリスト取得失敗:', error);
+                });
+        }
+
         function closeContainer() {
-            window.location.href = "admin.html"; 
+            document.querySelector('.upload-container').style.display = 'none';
+        }
+
+        function goBack() {
+            window.history.back(); // ブラウザの履歴を一つ戻る
         }
     </script>
-
-
 </body>
 </html>
