--- a/upload.html
+++ b/upload.html
@@ -81,31 +81,26 @@
             color: #28a745;
         }
 
-        .go-back-button {
-            margin-top: 1rem;
-            padding: 0.75rem;
+        .close-button {
+            position: absolute;
+            top: 20rem;
+            right: 0rem;
+            background: none;
             border: none;
-            border-radius: 4px;
-            background-color: #6c757d;
-            color: #fff;
-            font-size: 16px;
+            font-size: 20px;
             cursor: pointer;
-            transition: background-color 0.3s;
-            width: 100%;
-            box-sizing: border-box;
+            color: #333;
+            transition: color 0.3s;
         }
 
-        .go-back-button:hover {
-            background-color: #5a6268;
-        }
-
-        .go-back-button:active {
-            background-color: #4e555b;
+        .close-button:hover {
+            color: #007bff;
         }
     </style>
 </head>
 <body>
     <div class="upload-container">
+        <button class="close-button" onclick="goBack();">&larr; 戻る</button>
         <h1>画像アップロード</h1>
         <input type="text" id="folderName" placeholder="新規フォルダー名 (任意)">
         <select id="folderSelect">
@@ -113,7 +108,6 @@
         </select>
         <input type="file" id="file" accept="image/*" multiple required>
         <button onclick="uploadFile()">アップロード</button>
-        <button class="go-back-button" onclick="goBack()">戻る</button>
         <div id="message"></div>
     </div>
     
@@ -135,8 +129,15 @@
         const storage = getStorage(app);
         const auth = getAuth(app);
 
+        let userRole = ""; // ユーザーの役割を格納する変数
+
         onAuthStateChanged(auth, (user) => {
-            if (!user) {
+            if (user) {
+                // ここでユーザーの役割を取得する処理を追加する
+                // 例: userRole = getUserRole(user);
+                // 今回は仮に管理者と一般ユーザーの役割を設定
+                userRole = user.email === "admin@example.com" ? "admin" : "user";
+            } else {
                 window.location.href = "login.html";
             }
         });
@@ -208,12 +209,12 @@
                 });
         }
 
-        function closeContainer() {
-            document.querySelector('.upload-container').style.display = 'none';
-        }
-
         function goBack() {
-            window.history.back(); // ブラウザの履歴を一つ戻る
+            if (userRole === "admin") {
+                window.location.href = "admin.html";
+            } else if (userRole === "user") {
+                window.location.href = "user.html";
+            }
         }
     </script>
 </body>
