--- a/call.html
+++ b/call.html
@@ -119,7 +119,7 @@ footer {
     <header>
         <h1>お問い合わせ</h1>
         <nav>
-            <button onclick="location.href='about.html'">本サイトについて</button>
+            <button onclick="location.href='itsweb.html'">本サイトについて</button>
             <button onclick="location.href='index.html'">トップページに戻る</button>
         </nav>
     </header>
