--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
         <nav>
             <button class="nav-btn" onclick="location.href='//yuyawesleyan.github.io/archive-suzukieitarou/'">ホーム</button>
             <button class="nav-btn" onclick="location.href='call.html'">お問い合わせ</button>
+            <button class="nav-btn" onclick="location.href='itsweb.html'">本WEBサイトについて</button>
             <button class="nav-btn" onclick="location.href='index2.html'">管理者ログイン</button>
         </nav>
     </header>
