--- a/member.html
+++ b/member.html
@@ -319,7 +319,7 @@
     </header>
     <main>
         <div class="section join-project-box">
-            <a href="display.html" class="join-project-link">プロジェクトに参加する（活字化にチャレンジ！！）</a>
+            <a href="project.html" class="join-project-link">プロジェクトに参加する（活字化にチャレンジ！！）</a>
         </div>
         <div class="section upload-box">
             <a href="upload.html" class="upload-link">画像をアップロードする</a>
